[package]
    name = "heap1"

    authors = ["Jalon Wong <jalonwong@gmail.com>"]
    description = "The simplest possible heap."
    documentation = "https://docs.rs/heap1"
    edition = "2024"
    keywords = ["embedded", "no-std"]
    license = "MIT OR Apache-2.0"
    readme = "README.md"
    repository = "https://github.com/mcu-rust/heap1"
    version = "0.1.0"

[features]
    allocator-api = []
    std = []

[dependencies]
    portable-atomic = "1"
